package elukyanchikovaTP3;

public class BrestPepperoniPizza extends Pizza {
    public BrestPepperoniPizza() {
        this.pizzaName = "BrestPepperoni";
    }
}
