package elukyanchikovaTP3;

public class BrestVegetarianPizza extends Pizza {
    public BrestVegetarianPizza() {
        this.pizzaName = "BrestVegetarian";
    }
}
