package elukyanchikovaTP3;

public class StrasbourgPepperroniPizza extends Pizza {
    public StrasbourgPepperroniPizza() {
        this.pizzaName = "StrasbourgPepperoni";
    }
}
