package elukyanchikovaTP3;

public class StrasbourgVegetarianPizza extends Pizza {
    public StrasbourgVegetarianPizza() {
        this.pizzaName = "StrasbourgVegetarian";
    }
}
