@startuml

title __ELUKYANCHIKOVATP3's Class Diagram__\n

    class elukyanchikovaTP3.BrestPepperoniPizza {
        + BrestPepperoniPizza()
    }

  

    class elukyanchikovaTP3.BrestVegetarianPizza {
        + BrestVegetarianPizza()
    }

  

    class elukyanchikovaTP3.Main {
        {static} + main()
    }

  

    abstract class elukyanchikovaTP3.Pizza {
        # pizzaName : String
        + cook()
        + deliver()
        + getPizzaName()
        + pack()
        + prepare()
    }

  

    abstract class elukyanchikovaTP3.Pizzeria {
        + orderPizza()
        {abstract} ~ createPizza()
    }

  

  namespace elukyanchikovaTP3 {
    class elukyanchikovaTP3.PizzeriaStyleBrest {
        # createPizza()
    }
  }
  

    class elukyanchikovaTP3.PizzeriaStyleStrasbourg {
        # createPizza()
    }

  

    class elukyanchikovaTP3.PizzeriaTest {
        + BrestPepperoniPizzaTest()
        + BrestVegetarianPizzaTest()
        + StrasbourgPepperoniPizzaTest()
        + StrasbourgVegetarianPizzaTest()
    }

  

    class elukyanchikovaTP3.StrasbourgPepperroniPizza {
        + StrasbourgPepperroniPizza()
    }


    class elukyanchikovaTP3.StrasbourgVegetarianPizza {
        + StrasbourgVegetarianPizza()
    }

  

  elukyanchikovaTP3.BrestPepperoniPizza -up-|> elukyanchikovaTP3.Pizza
  elukyanchikovaTP3.BrestVegetarianPizza -up-|> elukyanchikovaTP3.Pizza
  elukyanchikovaTP3.PizzeriaStyleBrest -up-|> elukyanchikovaTP3.Pizzeria
  elukyanchikovaTP3.PizzeriaStyleStrasbourg -up-|> elukyanchikovaTP3.Pizzeria
  elukyanchikovaTP3.StrasbourgPepperroniPizza -up-|> elukyanchikovaTP3.Pizza
  elukyanchikovaTP3.StrasbourgVegetarianPizza -up-|> elukyanchikovaTP3.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
